@@ -48,6 +48,7 @@ import org.labkey.search.view.SearchWebPartFactory;
 import javax.servlet.ServletContext;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 
@@ -65,7 +66,7 @@ public class SearchModule extends DefaultModule
     @Override
     public Double getSchemaVersion()
     {
-        return 20.002;
+        return 21.000;
     }
 
     @Override
@@ -96,7 +97,7 @@ public class SearchModule extends DefaultModule
     @NotNull
     protected Collection<WebPartFactory> createWebPartFactories()
     {
-        return Collections.singletonList(new SearchWebPartFactory());
+        return List.of(new SearchWebPartFactory());
     }
 
     
@@ -163,25 +164,28 @@ public class SearchModule extends DefaultModule
     @Override
     public void afterUpdate(ModuleContext moduleContext)
     {
-        // After every upgrade, delete the index and clear the last indexed time on all documents to rebuild the entire index, #35674
-        final StartupListener l = new StartupListener()
+        // After every search module upgrade, delete the index and clear the last indexed time on all documents
+        // to rebuild the entire index, #35674 & #42617
+        if (!moduleContext.isNewInstall() && moduleContext.needsUpgrade(getSchemaVersion()))
         {
-            @Override
-            public String getName()
+            ContextListener.addStartupListener(new StartupListener()
             {
-                return "Search Service: delete index";
-            }
+                @Override
+                public String getName()
+                {
+                    return "Search Service: delete index";
+                }
 
-            @Override
-            public void moduleStartupComplete(ServletContext servletContext)
-            {
-                SearchService ss = SearchService.get();
+                @Override
+                public void moduleStartupComplete(ServletContext servletContext)
+                {
+                    SearchService ss = SearchService.get();
 
-                if (null != ss)
-                    ss.deleteIndex();
-            }
-        };
-        ContextListener.addStartupListener(l);
+                    if (null != ss)
+                        ss.deleteIndex();
+                }
+            });
+        }
     }
 
     @NotNull
